# cpp_dispositif_de_refroidissement_M1S1

./: .gitignore  CMakeLists.txt  README.md  simu.cfg
include/: matrice_tridiag.hpp  mesures.hpp  mi_activ_desactiv.hpp  mi_flux_constant.hpp  modele_instationnaire.hpp  modele_stationnaire.hpp  utils.hpp  vecteur.hpp
resultats/: graphique.sh
resultats/creation_graphiques/: convergence_modele_instat.py  maillage3D.py  solution1D_instat.py  solution1D_stat.py  solution3D_instat_activ_desactiv.py  solution3D_instat_flux_constant.py  solution3D_stat.py
src/: main.cpp  matrice_tridiag.cpp  mesures.cpp  mi_activ_desactiv.cpp  mi_flux_constant.cpp  modele_instationnaire.cpp  modele_stationnaire.cpp  utils.cpp  vecteur.cpp
